--- a/style/input.css
+++ b/style/input.css
@@ -1,7 +1,10 @@
 @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
+    .sidenav {padding-top: 15px;
+    width: auto;}
     .sidenav a {font-size: 18px;}
+
   }
+
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -9,8 +12,10 @@ body{
 .sidenav{
     height: 100%;
     width: 160px;
+    position: -webkit-sticky;
     position: fixed;
     background: #E7E9EB;
+    overflow-y: scroll;
 
 }
 .topnav{
@@ -37,11 +42,11 @@ body{
     background: rgb(211, 210, 210);
     display: flex;
     margin-left: 8px;
-    position: fixed;
+    /* position: fixed; */
     flex: 70%;
     justify-content: space-between;
     margin-left: 170px; 
-    padding: 0px 10px;
+    padding: 20px 10px 0px 10px;
     overflow: hidden;
     
     
@@ -57,7 +62,9 @@ nav a{
     color: black;
     text-decoration: none;
     text-align: center;
+    padding: 14px 16px;
     margin: 0px 10px;
+    
 
 }
 .content h2{
